# django-lighttpd-middleware

./: README.md  install  setup.cfg  test-install
src/django_lighttpd_middleware/: __init__.py
src/django_lighttpd_middleware.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
